samples/_failures_safe/1761084033_f49c68_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fac48588.c: In function ‘main’:
./samples/SAFE/__tmp_fac48588.c:190:5: error: expected declaration or statement at end of input
  190 |     int token_count = tokenize(input, tokens, MAX_TOKENS);
      |     ^~~
